--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
+    "recharts": "^2.4.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.0.2"
   },
